--- a/style.css
+++ b/style.css
@@ -454,3 +454,56 @@ section {
   grid-row: 4;
   grid-column: 4;
 }
+
+/* menu */
+.menu {
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(./images/menu-banner-not-resized.jpg);
+  background-size: cover;
+  text-align: center;
+}
+
+.menu-list {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  list-style: none;
+  text-align: left;
+  color: var(--white);
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
+}
+
+.menu-list-item {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  text-transform: capitalize;
+}
+
+.menu-list-title {
+  color: var(--color);
+  font-family: var(--heading-font);
+  font-size: 1.25rem;
+  letter-spacing: 1px;
+  margin-bottom: 0.25rem;
+  border-bottom: 1.5px solid var(--color);
+  display: inline-block;
+}
+
+.menu-item-description {
+  font-size: 0.85rem;
+}
+
+.menu-price {
+  font-size: 1.5rem;
+  color: var(--color);
+}
+
+.menu-btn {
+  border: 1.5px solid var(--color);
+  background-color: transparent;
+  padding: 1rem 1.25rem;
+  color: var(--color);
+  cursor: pointer;
+}
