--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ section {
   font-family: var(--heading-font);
   letter-spacing: 1.5px;
   margin-bottom: 1rem;
+  text-transform: capitalize;
+  text-align: center;
 }
 
 /* header/banner/nav */
@@ -506,4 +508,40 @@ section {
   padding: 1rem 1.25rem;
   color: var(--color);
   cursor: pointer;
+}
+
+/* booking */
+.book-form {
+  margin-top: 4rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr auto;
+  gap: 2rem;
+}
+
+.book-form label {
+  font-family: var(--heading-font);
+  font-size: 1.5rem;
+  color: var(--color);
+}
+
+.book-form input {
+  padding: 0.75rem;
+  width: 80%;
+}
+
+.book-btn {
+  align-self: end;
+  padding: 1rem 1.25rem;
+  background-color: var(--color);
+  font-weight: 600;
+  font-family: var(--reg-font);
+  cursor: pointer;
+}
+
+/* footer */
+footer {
+  background-color: var(--dark);
+  text-align: center;
+  padding: 3rem 0 1rem;
+  color: var(--white);
 }
